@@ -1,6 +1,7 @@
 xfburn 0.x
 ==========
 
+- Avoid adding non regular files (bug #2179)
 - Fix wrong get_speed call in burn iso dialog
 - Directory are sort before files in data composition
 - Fix segfault when removing a file and one of its parent directory together
